Added script to generate SSL keys in a Cygwin environment. Added SSL config to our httpd.conf file, and directives to restrict access to SSL keys.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@239 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/wamp/httpd.conf
+++ b/wamp/httpd.conf
@@ -4,16 +4,32 @@
 # main webserver in httpd.conf.
 #
 
-
 #
-# This should be changed to whatever you set DocumentRoot to.
+# Allow access from other hosts
 #
 <Directory "c:/wamp/www/">
-
-    Options Indexes FollowSymLinks
-    AllowOverride all
-
+	Options Indexes FollowSymLinks
+	AllowOverride all
 	Allow from all
-
 </Directory>
+
+#
+# Turn on SSL
+#
+Listen 443
+
+<VirtualHost _default_:443>
+SSLEngine On
+SSLCertificateFile    c:/wamp/www/sites/all/modules/reg/wamp/myserver.crt
+SSLCertificateKeyFile c:/wamp/www/sites/all/modules/reg/wamp/myserver.pem
+
+#
+# Deny access to SSL keys
+#
+<Location ~ "/sites/all/modules/reg/wamp">
+	Order Deny,Allow
+	Deny from all
+</Location>
+
+</VirtualHost>
 
