Renamed httpd.conf file and added extra notes for the latest version of WAMP.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@306 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/wamp/httpd-ssl.conf
+++ b/wamp/httpd-ssl.conf
@@ -1,17 +1,22 @@
 #
 # This is a local httpd.conf file for Apache.  In order to use this in
-# WAMP, include it from the httpd.conf file, but first comment out the
-# main webserver in httpd.conf.
+# WAMP, edit httpd.conf and add this line at the end:
 #
+# Include "c:/wamp/www/sites/all/modules/reg/wamp/httpd-ssl.conf"
+#
+# Test the config with httpd.exe -t
+# mod_ssl may need to be loaded by hand...
+# 
 
 #
 # Allow access from other hosts
 #
-<Directory "c:/wamp/www/">
-	Options Indexes FollowSymLinks
-	AllowOverride all
-	Allow from all
-</Directory>
+# EDIT: This doesn't seemt to be needed in the latest version of WAMP...
+#<Directory "c:/wamp/www/">
+#	Options Indexes FollowSymLinks
+#	AllowOverride all
+#	Allow from all
+#</Directory>
 
 #
 # Deny access to SSL keys
@@ -30,7 +35,5 @@ Listen 443
 SSLEngine On
 SSLCertificateFile    c:/wamp/www/sites/all/modules/reg/wamp/myserver.crt
 SSLCertificateKeyFile c:/wamp/www/sites/all/modules/reg/wamp/myserver.pem
-
 </VirtualHost>
-
 
